Minor changes after meeting

--- a/main.tex
+++ b/main.tex
@@ -224,6 +224,7 @@ TODO: Use something like eth or thorn
 
 
 
+
 \chapter{Mathematical representation of infinitesimal objects}
 
 TODO: Expand the justification of "for k-surface..." below here
@@ -236,10 +237,8 @@ TODO: Expand the justification of "for k-surface..." below here
 We are interested in studying distribution on manifolds. The limit on infinitesimal areas is a density and requires coordinates to be differentiable.
 
 
-
-\emph{Move the definition name to the beginning, then give the meaning}
 \begin{defn}
-	Given some manifold $X$ of dimension $n$, with overlapping subsets $U$ and $V$ with defined coordinate systems $Q: U \to \mathbb{R}^n$ and $Q': V \to \mathbb{R}^n$, if the coordinate transformation $f = Q \circ Q'^{-1}$ is smooth, then $X$ is a \textbf{differentiable manifold}. 
+	A \textbf{differentiable manifold} is a manifold $X$ of dimension $n$, with overlapping subsets $U$ and $V$ with defined coordinate systems $Q: U \to \mathbb{R}^n$ and $Q': V \to \mathbb{R}^n$, such that the coordinate transformation $f = Q \circ Q'^{-1}$ is smooth. 
 \end{defn}
 
 
@@ -252,7 +251,7 @@ We are interested in studying distribution on manifolds. The limit on infinitesi
 
 - For a surface, a vector will be an infinitesimal displacement along the tangent plane. 
 
-\emph{Talking about vectors and covectors seperatelydoesn't really make sense, since they arise simultaneously. Put this with the covector section.}
+\emph{Talking about vectors and covectors seperately doesn't really make sense, since they arise simultaneously. Put this with the covector section.}
 
 Consider a point P($x^a$).
  
